Primera parte de principios SOLID

--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Actividad 2</title>
 </head>
 <body>
-    <h1>Actividad 2 - Implementación de principios SOLID y Grasp</h1>
-    <h3>Integrantes</h3>
-    <ol>
+    <h1>Actividad 2 - Implementación de principios SOLID y GRASP</h1>
+    <h2>Integrantes</h2>
+    <ol style="font-size: x-large;">
         <li>Miguel Alejandro Castillo</li>
-        <li>Leidy</li>
+        <li>Leidy Tatiana Avellaneda</li>
     </ol>
-    <script src="js/Ejercicio_1.js"></script>
+    <script src="SOLID/SRP.js"></script>
+    <script src="SOLID/OCP.js"></script>
+    <script src="SOLID/LSP.js"></script>
+    <script src="SOLID/ISP.js"></script>
+    <script src="SOLID/DIP.js"></script>
 </body>
 </html>
