file markdown configurado para los pantallazos que solicitaron

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Actividad 2</title>
+    <title>Actividad_2</title>
 </head>
 <body>
     <h1>Actividad 2 - Implementación de principios SOLID y GRASP</h1>
-    <h2>Integrantes</h2>
+    <h2>Estudiantes Ingeniería de software Modalidad Virtual</h2>
     <ol style="font-size: x-large;">
-        <li>Miguel Alejandro Castillo</li>
-        <li>Leidy Tatiana Avellaneda</li>
+        <li>Miguel Alejandro Castillo Amador (mcasti40@ibero.edu.co)</li>
+        <li>Leidy Tatiana Avellaneda (lavella3@ibero.edu.co)</li>
     </ol>
     <script src="SOLID/SRP.js"></script>
     <script src="SOLID/OCP.js"></script>
